se dejo funcionando la creacion de turnos por los medicos
