# backend/src/routes/usersRoutes.ts
@@ -7,6 +7,7 @@ import {
     getUserByIdHandler,
     updateUserHandler,
 } from "../handlers/usersHandler";
+import { authenticateToken } from "../middlewares/authMiddleware";
 
 const usersRouter = Router();
 
@@ -14,7 +15,7 @@ usersRouter.get("/", getAllUsersHandler);
 usersRouter.get("/dni/:dni", getUserByDniHandler);
 usersRouter.get("/:id", getUserByIdHandler);
 usersRouter.post("/create", createUserHandler);
-usersRouter.put("/:id", updateUserHandler)
+usersRouter.put("/:id", authenticateToken,updateUserHandler)
 usersRouter.delete("/:id", deleteUserHandler)
 
 export default usersRouter;
