# backend/src/swagger.json
@@ -338,6 +338,18 @@
         }
     },
     "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
+            }
+        },
+        "security": [
+            {
+                "bearerAuth": []
+            }
+        ],
         "schemas": {
             "User": {
                 "type": "object",
